fixed the z-index for the sidebar

--- a/src/components/defaultcomps/subComponents/Sides/subComponents/sides.css
+++ b/src/components/defaultcomps/subComponents/Sides/subComponents/sides.css
@@ -79,4 +79,5 @@
     box-shadow: 1px 7px 4px 0px rgba(16, 24, 40, 0.1);
     background-color: var(--neutral-background-color);
     transition: width 0.3s;
+    z-index: 2;
 }
